# backend

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-compose.yaml  fly.toml
.sqlx/: query-d15883f0187e0fd6aa43e80def921c2dcf00cab955883a1c856c6e6742ae429e.json
src/: main.rs
src/database/: mod.rs
src/database/migrations/: 20240921082652_initialize.sql  20240923072210_add_chat_history.sql  20240924152445_comments.sql
src/database/models/: chat.rs  comment.rs  user.rs
src/server/: mod.rs
src/server/middlewares/: auth.rs
src/server/routes/: chat.rs  comment.rs  mod.rs  oauth2.rs  summary.rs  user.rs
