[package]
name = "onebrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
axum = "0.7.5"
utoipa = "4.2.3"
clap = { version = "4.5.17", features = ["derive", "env"] }
oauth2 = "4.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-session = "3.0.0"
axum-extra = "0.9.3"
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
snafu = "0.8.4"
serenity = "0.12.2"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.3.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
url = "2.5.2"
rand = "0.8.5"
chrono = "0.4.38"
serde_json = "1.0.128"
sha2 = "0.10.8"
hex = "0.4.3"
