[package]
name = "onebrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive", "env"] }
oauth2 = "4.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serenity = "0.12.2"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
jsonwebtoken = "9.3.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = "0.4.38"
serde_json = "1.0.128"
sha2 = "0.10.8"
tower-http = { version = "0.6.0", features = ["cors"] }
langchain-rust = "4.4.2"
indoc = "2.0.5"
futures = "0.3.30"
tokio-stream = "0.1.16"
